# voidly-pay

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: architecture.yml  integration-help.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: pay-mcp-registry-publish.yml  voidly-pay-federation-crawl.yml  voidly-pay-hf-snapshot.yml  voidly-pay-network-health.yml  voidly-pay-public-probe.yml  voidly-pay-reach-audit.yml  voidly-pay-smoke-tests.yml
adapters/a2a/: README.md  package.json  server.js
adapters/autogen/: README.md  pyproject.toml
adapters/autogen/voidly_pay_autogen/: __init__.py  tools.py
adapters/crewai/: README.md  pyproject.toml
adapters/crewai/voidly_pay_crewai/: __init__.py  tools.py
adapters/haystack/: README.md  pyproject.toml
adapters/haystack/voidly_pay_haystack/: __init__.py  tools.py
adapters/langchain/: README.md  example.py  pyproject.toml
adapters/langchain/voidly_pay_langchain/: __init__.py  tools.py
adapters/llamaindex/: README.md  pyproject.toml
adapters/llamaindex/voidly_pay_llamaindex/: __init__.py  tools.py
adapters/openai-compat/: README.md  package.json  server.js
adapters/vercel-ai/: README.md  package.json  tsconfig.json
adapters/x402/: README.md  package.json  server.js
agent-sdk/: .npmignore  LICENSE  README.md  package.json  test-brutal.mjs  test-call-priority.mjs  test-call-signals.mjs  test-cross-session.mjs  test-e2e.mjs  test-full-e2e.mjs  test-multi-agent-chaos.mjs  test-persistence-stress.mjs  test-ratchet-recovery.mjs  test-relay-torture.mjs  test-security.mjs  test-soak.mjs  test-sse-recovery.mjs  test-stress-v2.mjs  tsconfig.json  tsup.config.ts
agent-sdk/examples/: censorship-monitor.mjs  conversation.mjs  encrypted-channel.mjs  post-quantum.mjs  quickstart.mjs  rpc.mjs  sse-streaming.mjs
agent-sdk/src/: index.ts
docs/: first-contributor-guide.md  voidly-pay-directive.md  voidly-pay-escrow-invariants.md  voidly-pay-federation.md  voidly-pay-for-ai-agents.md  voidly-pay-hydra.md  voidly-pay-invariants.md  voidly-pay-marketplace-invariants.md  voidly-pay-onboarding-invariants.md  voidly-pay-receipt-invariants.md  voidly-pay-stage-2.md  voidly-pay-unstoppable.md
mcp-server/: .gitignore  .mcpregistry_registry_token  .npmignore  LICENSE  README.md  claude_desktop_config.example.json  package.json  server.json  smithery.yaml  tsup.config.ts
mcp-server/src/: index.ts
pay-cli/: README.md  package.json  tsconfig.json  tsup.config.ts
pay-cli/src/: cli.ts
pay-examples/: 01-quickstart.mjs  02-transfer.mjs  03-capability-search.mjs  04-hire-and-verify.mjs  05-publish-capability.mjs  06-escrow-release.mjs  README.md
pay-examples/python/: 01_quickstart.py  02_transfer.py  03_capability_search.py  04_hire_and_verify.py  05_publish_capability.py  06_escrow_release.py  README.md
pay-federation/: README.md  peers.json  sources.txt
pay-federation/history/: .gitkeep  2026-04-20.json  2026-04-22.json  2026-04-24.json  2026-05-01.json  2026-05-03.json  2026-05-06.json  2026-05-09.json  2026-05-12.json  2026-05-13.json  2026-05-16.json  2026-05-19.json  2026-05-20.json  2026-05-22.json  2026-05-24.json  2026-05-26.json  2026-05-27.json  2026-05-28.json  2026-05-29.json  2026-05-31.json  2026-06-01.json  2026-06-02.json  2026-06-03.json  2026-06-04.json  2026-06-06.json  2026-06-08.json  2026-06-10.json  2026-06-11.json  2026-06-13.json  2026-06-14.json  2026-06-15.json  2026-06-17.json  2026-06-18.json  2026-06-19.json  2026-06-20.json  2026-06-24.json  2026-06-25.json  2026-06-28.json  2026-06-29.json  2026-06-30.json  (+12 more)
pay-health/: README.md  stale.json
pay-health/history/: .gitkeep  2026-04-20T00-10.json  2026-04-20T00-26.json  2026-04-20T00-33.json  2026-04-20T01-09.json  2026-04-20T01-56.json  2026-04-20T03-05.json  2026-04-20T04-24.json  2026-04-20T05-29.json  2026-04-20T06-20.json  2026-04-20T07-17.json  2026-04-20T08-17.json  2026-04-20T09-05.json  2026-04-20T09-56.json  2026-04-20T10-35.json  2026-04-20T11-12.json  2026-04-20T11-46.json  2026-04-20T12-13.json  2026-04-20T12-44.json  2026-04-20T13-16.json  2026-04-20T19-44.json  2026-04-20T21-09.json  2026-04-20T23-58.json  2026-04-21T02-09.json  2026-04-21T05-10.json  2026-04-21T07-05.json  2026-04-21T10-21.json  2026-04-21T12-46.json  2026-04-21T16-49.json  2026-04-21T17-53.json  2026-04-21T18-58.json  2026-04-21T20-02.json  2026-04-21T21-58.json  2026-04-21T23-22.json  2026-04-21T23-59.json  2026-04-22T05-09.json  2026-04-22T07-05.json  2026-04-22T11-33.json  2026-04-22T12-45.json  2026-04-22T14-21.json  (+1101 more)
pay-hydra/: Dockerfile  README.md  agent.js  bootstrap.sh  docker-compose.yml  package.json  voidly-hydra-provider.service
pay-hydra-npm/: README.md  package.json
pay-hydra/helm/: README.md
pay-hydra/terraform/: README.md  cloud-init.yaml
pay-mcp/: README.md  glama.json  llms-install.md  package.json  server.json  smithery.yaml  tsconfig.json  tsup.config.ts
pay-mcp/src/: cli.ts  index.ts  tools.test.ts  tools.ts
pay-reach/: README.md  latest.json  registries.json
pay-reach/history/: .gitkeep  2026-05-18.json  (+4 more)
pay-sdk-js/: LICENSE  README.md  package.json  tsconfig.json
pay-sdk-py/: README.md  pyproject.toml
pay-sdk-py/examples/: autogen_example.py  crewai_example.py  langchain_example.py
pay-sdk-py/src/voidly_pay/: __init__.py  client.py
pay-sdk-py/tests/: test_sdk.py
python-sdk/: README.md  pyproject.toml
python-sdk/examples/: basic_messaging.py  channel_bot.py  channel_coordination.py  crewai_team.py  langchain_agent.py
python-sdk/tests/: test_live_relay.py
python-sdk/voidly_agents/: __init__.py  agent.py  types.py
python-sdk/voidly_agents/integrations/: __init__.py  crewai.py  langchain.py
showcase-echo-agent/: README.md  agent.js  agent2.js  auto-pricing.js  package.json
showcase-probe-agent/: README.md  agent.js  package.json
showcase-watchdog-agent/: README.md  agent.js  package.json  voidly-showcase-watchdog.service
(+33 files in other folders)
