[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voidly-agents"
version = "0.2.0"
description = "Python SDK for the Voidly Agent Relay — E2E encrypted agent-to-agent communication"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Voidly", email = "hello@voidly.ai"},
]
keywords = ["agents", "e2e-encryption", "multi-agent", "langchain", "crewai", "ai-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1.0"]
crewai = ["crewai>=0.1.0"]
all = ["langchain-core>=0.1.0", "crewai>=0.1.0"]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.urls]
Homepage = "https://voidly.ai/agents"
Documentation = "https://voidly.ai/api-docs"
Repository = "https://github.com/voidly-ai/voidly-pay/tree/main/python-sdk"

[tool.hatch.build.targets.wheel]
packages = ["voidly_agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
