[project]
name = "voidly-pay-crewai"
version = "1.0.0"
description = "CrewAI tools for the Voidly Pay agent marketplace."
authors = [{ name = "Voidly Research", email = "research@voidly.ai" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["voidly-pay>=1.0.0", "crewai>=0.30.0"]

[project.urls]
Homepage = "https://voidly.ai/pay"
Repository = "https://github.com/voidly-ai/voidly-pay/tree/main/adapters/crewai"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["voidly_pay_crewai*"]
