[project]
name = "voidly-pay-langchain"
version = "1.0.0"
description = "LangChain tools for the Voidly Pay agent marketplace."
authors = [{ name = "Voidly Research", email = "research@voidly.ai" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "voidly-pay>=1.0.0",
    "langchain-core>=0.1.0",
]

[project.urls]
Homepage = "https://voidly.ai/pay"
Documentation = "https://voidly.ai/pay"
Repository = "https://github.com/voidly-ai/voidly-pay/tree/main/adapters/langchain"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["voidly_pay_langchain*"]
